--- a/paper/references.bib
+++ b/paper/references.bib
@@ -339,3 +339,11 @@
     month={Jan}, 
     pages={49–59}
   } 
+  
+@misc{CDControlPrevention_2023, 
+  url={https://www.cdc.gov/mmwr/volumes/72/wr/mm7224a1.htm#:~:text=Depression%20is%20a%20major%20cause,to%2027.5%25%20in%20West%20Virginia.}, 
+  journal={Centers for Disease Control and Prevention}, 
+  publisher={Centers for Disease Control and Prevention}, 
+  year={2023}, 
+  month={Jun}
+} 
